Added "Many" objects test. Disabled C# packet collation. Currently bugged.

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,9 @@
 Bugs:
-- Fix collated packets. Setting the buffer size to 0xffff was dropping packets, but lowering the value results in decoding errors.
-- Socket bugs:
+- Fix C# packet collation.
+  - Collated packets seem to go missing.
+- Custom socket bugs (workaround using Qt sockets):
   - On OSX there is sporadic lag.
+  - Large packets go missing.
 - Clicking Select/Open in file browser sometimes does nothing.
 - Large steps often render before the catching the target frame.
   - Add a check to Router.Update() on whether the thread is at the target frame. Keep looping while not.
