--- a/todo.txt
+++ b/todo.txt
@@ -5,8 +5,12 @@ Bugs:
 - Large steps often render before the catching the target frame.
   - Add a check to Router.Update() on whether the thread is at the target frame. Keep looping while not.
     - Also include a time limit to prevent deadlock.
+- Large data frames have been known to end up an odd state whereby some data from the previous are still visible and not all data from the next frame are visible.
+  - Possibly a thread safety issue on the concurrent queue.
 
 TODO:
+- Complete C++ TCP socket support built on POCO
+- "Server" implementation which writes directly to a local file.
 - Revise MeshSet/MeshShape.
   - Revised MeshSet to support overriding indexing.
   - Meshes to support instancing topology. Ideal for visualising voxels.
@@ -30,14 +34,14 @@ TODO:
 - Client rendering override modes:
   - Solid/wireframe overlay
   - Wireframe override
-- Support splitting recording files at around 2GB.
 
 Maybe:
-- Support other socket implementations in the c++ server code. E.g., POCO, Qt, asio.
+- Support splitting recording files at around 2GB.
+- TCP socket support built on asio.
 
 Performance improvements:
 - Need to investigate how to do more object management off the main thread. Not well supported by Unity as it doesn't allow objects to be created on other threads.
-- Improve shutdown time after using large objects.
+- Improve shutdown time after using large numbers of objects.
 
 Pie in the sky:
 - Load in a mesh/scene for reference and/or context.
