Update to Unity 5.5, added Octomap occupancy map generation example, minor tweaks. - Core files updated to support Unity 5.5. - Added new example to visualise generating an Octomap occupancy map. Requires Octomap and LIBLAS (LAZZIP optional). - ShapeComponent and PointsComponent properties backed by serialised fieds to support inspection in Unity Editor. - Some comment updates.

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 Bugs:
+- MESHSET_END() macro does not cater for releasing associated resources. Parameterisation needs to change.
 - Custom socket bugs (workaround using Qt sockets):
   - On OSX there is sporadic lag.
   - Large packets go missing.
