Added looping playback option and fixed occupancy example trajectory. - Also added partial playback speed implementation. Disabled as the viewer can't keep up with excessive speeds.

--- a/todo.txt
+++ b/todo.txt
@@ -19,6 +19,7 @@ TODO:
   - Handler options and UI
   - Camera Selection UI
 - Playback speed control.
+  - Partly implemented. Tended to hang the viewer at higher speeds.
 - Scene Graph UI
 - Make sure modal dialogs work properly blocking input to background layers.
 - Export to PLY file (because PLY is easy).
