Converted mesh cache handler serialisation over to use the MeshBase/MeshResource code to reduce maintenance.

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,5 @@
 Bugs:
-- MESHSET_END() macro does not cater for releasing associated resources. Parameterisation needs to change.
-  - Consider adding a dummy mesh resource which only exposes an ID, but no data.
+- TES_MESHSET_XXX() macros do not cater for defining the associated resources. Parameterisation needs to change.
 - Router UpdateCatchUp is currently incompatible with snapshots. Transient objects will be excluded from the snapshot.
 - Large data frames have been known to end up an odd state whereby some data from the previous are still visible and not all data from the next frame are visible.
   - Possibly a thread safety issue on the concurrent queue.
@@ -12,6 +11,11 @@ Bugs:
 TODO:
 - Profile StreamThread packet decoding and improve performance.
   - Current playback speed bottleneck when stepping.
+- Reduce serialisation maintenance burden. There is code duplication of serialisation code for complex shapes. The following shapes duplicate serialisation in their Handlers and their Shapes:
+  - MeshHandler/MeshShape
+  - MeshCache/MeshBase (MeshResource)
+  - PointCloud/PointCloudHandler
+  - See if MeshHandler can leverage the MeshResource code to ensure consistent serialisation.
 - "Server" implementation which writes directly to a local file.
 - Change shape shaders to support GPU instancing.
 - Consider adding batched object creation messages.
